test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Acquisition_Agreement_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Agreement_Y_N__c</fullName>
    <label>Acquisition Agreement Y/N</label>
    <length>10</length>
    <type>Text</type>
</CustomField>