test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Additional_Upfront_Costs_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Upfront_Costs_2__c</fullName>
    <label>zzArchive - Additional Upfront Costs 2</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>