test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/AEP_20_years__c.field-meta.xml
<CustomField>
    <fullName>AEP_20_years__c</fullName>
    <label>zzArchive - AEP (20 years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>