test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/AEP_kWh__c.field-meta.xml
<CustomField>
    <fullName>AEP_kWh__c</fullName>
    <label>zzArchive - AEP kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>