test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/AEP_year_1_8760__c.field-meta.xml
<CustomField>
    <fullName>AEP_year_1_8760__c</fullName>
    <label>zzArchive - AEP year 1 (8760)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>