test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Agent_Agreement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Agent_Agreement_Cost__c</fullName>
    <label>zzArchive - Agent Agreement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>