test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Agent_Agreement_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Agent_Agreement_Y_N__c</fullName>
    <label>Agent Agreement Y/N</label>
    <length>10</length>
    <type>Text</type>
</CustomField>