test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Aggregation_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Funding_Date__c</fullName>
    <label>Aggregation Funding Date</label>
    <type>Date</type>
</CustomField>