test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/AM_Cost__c.field-meta.xml
<CustomField>
    <fullName>AM_Cost__c</fullName>
    <label>zzArchive - AM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>