test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/BESS_Size__c.field-meta.xml
<CustomField>
    <fullName>BESS_Size__c</fullName>
    <label>zzArchive - BESS Size</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>