test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/BESS_Y_N__c.field-meta.xml
<CustomField>
    <fullName>BESS_Y_N__c</fullName>
    <label>zzArchive - Bess Y/N</label>
    <length>20</length>
    <type>Text</type>
</CustomField>