test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <label>zzArchive - Bill to Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>