test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Budgetary_AC_kW__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_AC_kW__c</fullName>
    <label>zzArchive - Budgetary AC kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>