test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Budgetary_Date__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Date__c</fullName>
    <label>zzArchive - Budgetary Date</label>
    <type>Date</type>
</CustomField>