test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunity Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>