test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Carport_Specific_Production__c.field-meta.xml
<CustomField>
    <fullName>Carport_Specific_Production__c</fullName>
    <label>zzArchive - Carport Specific Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>