test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cash_Deal_CM__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deal_CM__c</fullName>
    <label>Cash Deal CM $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>