test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cash_Deal_CM_p__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deal_CM_p__c</fullName>
    <label>Cash Deal CM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>