test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cash_Deal_O_M_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cash_Deal_O_M_Revenue__c</fullName>
    <label>Cash Deal O&amp;M Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>