test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cash_Sale_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cash_Sale_Margin__c</fullName>
    <label>zzArchive - Cash Sale Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>