test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Class_B_Aggregation_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Class_B_Aggregation_Funding_Amount__c</fullName>
    <label>Class B Aggregation Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>