test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/CM__c.field-meta.xml
<CustomField>
    <fullName>CM__c</fullName>
    <label>zzArchive - CM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>