test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/CM_Percent__c.field-meta.xml
<CustomField>
    <fullName>CM_Percent__c</fullName>
    <label>zzArchive - CM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>