test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/CM_Total__c.field-meta.xml
<CustomField>
    <fullName>CM_Total__c</fullName>
    <label>zzArchive - CM Total $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>