test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/CMP__c.field-meta.xml
<CustomField>
    <fullName>CMP__c</fullName>
    <label>zzArchive - CM%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>