test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/COD_Date__c.field-meta.xml
<CustomField>
    <fullName>COD_Date__c</fullName>
    <label>zzArchive - COD Date</label>
    <type>Date</type>
</CustomField>