test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <formula>If( 
AND (Roof_DC_kW__c &gt;0, Ground_DC_kW__c &gt;0,  Carport_DC_kW__c &gt;0),&quot;RT GM CP&quot;,
IF(
  AND (Roof_DC_kW__c &gt;0, Ground_DC_kW__c &gt; 0),&quot;RT GM&quot;,
IF(
  AND (Roof_DC_kW__c &gt;0,  Carport_DC_kW__c &gt;0),&quot;RT CP&quot;,
IF(
  Roof_DC_kW__c &gt;0,&quot;RT&quot;,
IF(
  AND (Ground_DC_kW__c &gt;0,  Carport_DC_kW__c &gt;0),&quot;GM CP&quot;,
If(
  Ground_DC_kW__c &gt;0,&quot;GM&quot;,
IF(
  Carport_DC_kW__c &gt;0,&quot;CP&quot;
,&quot; &quot;
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configuration</label>
    <type>Text</type>
</CustomField>