test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <label>zzArchive - Contract Date</label>
    <type>Date</type>
</CustomField>