test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Contract_W__c.field-meta.xml
<CustomField>
    <fullName>Contract_W__c</fullName>
    <label>zzArchive - Total Cost Contract $/W</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>