test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cost_Roll_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cost_Roll_Up_Notes__c</fullName>
    <label>zzArchive - Cost Roll Up Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>