test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Cost_W__c.field-meta.xml
<CustomField>
    <fullName>Cost_W__c</fullName>
    <label>zzArchive - Cost $/W</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>