test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>75</length>
    <type>Text</type>
</CustomField>