test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer Address</label>
    <type>TextArea</type>
</CustomField>