test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Customer_Engaged_Evaluating_Solving__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engaged_Evaluating_Solving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArcCustomer Engaged/Evaluating/Solving</label>
    <type>Checkbox</type>
</CustomField>