test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Customer_Kick_Off_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>Customer_Kick_Off_Meeting_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive Customer Kick-Off Meeting Held</label>
    <type>Checkbox</type>
</CustomField>