test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Direct_Labor__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labor__c</fullName>
    <label>zzArchive - Direct Labor $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>