test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Direct_Material__c.field-meta.xml
<CustomField>
    <fullName>Direct_Material__c</fullName>
    <label>zzArchive - Direct Material $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>