test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>zzArchive - EIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>