test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>