test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Est_Award__c.field-meta.xml
<CustomField>
    <fullName>Est_Award__c</fullName>
    <label>zzArchive - Est Award</label>
    <type>Date</type>
</CustomField>