test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Est_COD__c.field-meta.xml
<CustomField>
    <fullName>Est_COD__c</fullName>
    <label>zzArchive - Est COD</label>
    <type>Date</type>
</CustomField>