test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Est_Contract__c.field-meta.xml
<CustomField>
    <fullName>Est_Contract__c</fullName>
    <label>zzArchive - Est Contract</label>
    <type>Date</type>
</CustomField>