test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Est_FNTP__c.field-meta.xml
<CustomField>
    <fullName>Est_FNTP__c</fullName>
    <label>zzArchive - Est FNTP</label>
    <type>Date</type>
</CustomField>