test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Est_MC__c.field-meta.xml
<CustomField>
    <fullName>Est_MC__c</fullName>
    <label>zzArchive - Est MC</label>
    <type>Date</type>
</CustomField>