test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Estimated_Award__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Award__c</fullName>
    <label>(4) Estimated Award</label>
    <type>Date</type>
</CustomField>