test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Financial_Partner__c.field-meta.xml
<CustomField>
    <fullName>Financial_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshots (Financial Partner)</relationshipLabel>
    <relationshipName>Opportunity_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>