test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Firm_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Date__c</fullName>
    <label>zzArchive - Firm Date</label>
    <type>Date</type>
</CustomField>