test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Ground_DC_kW__c.field-meta.xml
<CustomField>
    <fullName>Ground_DC_kW__c</fullName>
    <label>zzArchive - Ground DC kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>