test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Inactive_Dormant__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Dormant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive/Dormant</label>
    <type>Checkbox</type>
</CustomField>