test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Incentive_Program__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Program__c</fullName>
    <label>Incentive Program</label>
    <length>150</length>
    <type>Text</type>
</CustomField>