test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Incentive_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Revenue__c</fullName>
    <label>Incentive Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>