test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Incentive_Secured__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Secured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Incentive Secured</label>
    <type>Checkbox</type>
</CustomField>