test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Initial_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Amount__c</fullName>
    <label>Initial Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>