test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Initial_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Date__c</fullName>
    <label>Initial Funding Date</label>
    <type>Date</type>
</CustomField>