test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Interconnection_Approval_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Approval_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchiInterconnection Approval Obtained</label>
    <type>Checkbox</type>
</CustomField>