test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Inverter_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Type__c</fullName>
    <label>zzArchive - Inverter Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>