test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWac_Formula__c.field-meta.xml
<CustomField>
    <fullName>kWac_Formula__c</fullName>
    <formula>kWac_Rooftop__c + kWac_Canopy__c + kWac_Ground_Mount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzArchive - kWac Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>