test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWac_Ground_Mount__c.field-meta.xml
<CustomField>
    <fullName>kWac_Ground_Mount__c</fullName>
    <label>zzArchive - kWac Ground Mount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>