test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWac_Rooftop__c.field-meta.xml
<CustomField>
    <fullName>kWac_Rooftop__c</fullName>
    <label>zzArchive - kWac Rooftop</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>