test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWdc_Canopy__c.field-meta.xml
<CustomField>
    <fullName>kWdc_Canopy__c</fullName>
    <label>zzArchive - kWdc Canopy</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>