test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWdc_Ground_Mount__c.field-meta.xml
<CustomField>
    <fullName>kWdc_Ground_Mount__c</fullName>
    <label>zzArchive - kWdc Ground Mount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>