test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWdc_Rooftop__c.field-meta.xml
<CustomField>
    <fullName>kWdc_Rooftop__c</fullName>
    <label>zzArchive - kWdc Rooftop</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>