test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWh_kWp_yr__c.field-meta.xml
<CustomField>
    <fullName>kWh_kWp_yr__c</fullName>
    <label>zzArchive - kWh/kWp/yr</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>