test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/kWh_year__c.field-meta.xml
<CustomField>
    <fullName>kWh_year__c</fullName>
    <label>zzArchive - kWh/year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>