test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Land_Owner_if_not_Customer__c.field-meta.xml
<CustomField>
    <fullName>Land_Owner_if_not_Customer__c</fullName>
    <label>Land Owner (if not Customer)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>