test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Latest_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Latest_Estimate__c</fullName>
    <label>zzArchive - Latest Estimate</label>
    <type>Date</type>
</CustomField>