test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Latest_Estimate_DC_kW__c.field-meta.xml
<CustomField>
    <fullName>Latest_Estimate_DC_kW__c</fullName>
    <label>zzArchive - Latest Estimate DC kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>