test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Lead_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Date__c</fullName>
    <label>zzArchive - Lead Creation Date</label>
    <type>Date</type>
</CustomField>