test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>zzArchive - Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference / Trade Show</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Partner/Co_Dev</fullName>
                <label>Partner/Co Dev</label>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Direct Origination</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>