test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Lease_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lease_Rate__c</fullName>
    <label>zzArchive - Lease Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>