test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Metering_Setup__c.field-meta.xml
<CustomField>
    <fullName>Metering_Setup__c</fullName>
    <label>Metering Setup</label>
    <length>150</length>
    <type>Text</type>
</CustomField>