test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Milestone_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Billing_Schedule__c</fullName>
    <label>Milestone Billing Schedule</label>
    <length>150</length>
    <type>Text</type>
</CustomField>