test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/MIPA_Agreement_Y_N__c.field-meta.xml
<CustomField>
    <fullName>MIPA_Agreement_Y_N__c</fullName>
    <label>MIPA Agreement Y/N</label>
    <length>10</length>
    <type>Text</type>
</CustomField>