test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>zzArchive - Module Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>