test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Module_Wattage__c.field-meta.xml
<CustomField>
    <fullName>Module_Wattage__c</fullName>
    <label>zzArchive - Module Wattage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>