test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Non_Ministerial_Permitting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Non_Ministerial_Permitting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArcNon-Ministerial Permitting Complete</label>
    <type>Checkbox</type>
</CustomField>