test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/NTP_Granted__c.field-meta.xml
<CustomField>
    <fullName>NTP_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - NTP Granted</label>
    <type>Checkbox</type>
</CustomField>