test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Number_of_Modules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Modules__c</fullName>
    <label>zzArchive - Number of Modules</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>