test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/O_M_Cost__c.field-meta.xml
<CustomField>
    <fullName>O_M_Cost__c</fullName>
    <label>zzArchive - O&amp;M Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>