test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Offtake_Structure__c.field-meta.xml
<CustomField>
    <fullName>Offtake_Structure__c</fullName>
    <label>Offtake Structure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>