test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>