test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Origination_Type__c.field-meta.xml
<CustomField>
    <fullName>Origination_Type__c</fullName>
    <label>Origination Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>