test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_Revenue__c</fullName>
    <label>Other Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>