test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Number__c</fullName>
    <label>Parcel Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>