test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PO_Issued_for_Inverters__c.field-meta.xml
<CustomField>
    <fullName>PO_Issued_for_Inverters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - PO Issued for Inverters</label>
    <type>Checkbox</type>
</CustomField>