test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PO_Issued_for_Racking__c.field-meta.xml
<CustomField>
    <fullName>PO_Issued_for_Racking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - PO Issued for Racking</label>
    <type>Checkbox</type>
</CustomField>