test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Point_of_Interconnection__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Interconnection__c</fullName>
    <label>zzArchive - Point of Interconnection</label>
    <length>150</length>
    <type>Text</type>
</CustomField>