test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zzArchive - Portfolio</label>
    <type>Checkbox</type>
</CustomField>