test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PPA_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>PPA_Billing_Schedule__c</fullName>
    <label>PPA Billing Schedule</label>
    <length>150</length>
    <type>Text</type>
</CustomField>