test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PPA_Escalator__c.field-meta.xml
<CustomField>
    <fullName>PPA_Escalator__c</fullName>
    <label>zzArchive - PPA Escalator</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>