test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PPA_Price__c.field-meta.xml
<CustomField>
    <fullName>PPA_Price__c</fullName>
    <label>zzArchive - PPA Price Yr 1</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>