test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/PPA_Term__c.field-meta.xml
<CustomField>
    <fullName>PPA_Term__c</fullName>
    <label>zzArchive - PPA Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>