test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Price_W__c.field-meta.xml
<CustomField>
    <fullName>Price_W__c</fullName>
    <label>zzArchive - Price $/W</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>