test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_City__c.field-meta.xml
<CustomField>
    <fullName>Project_City__c</fullName>
    <label>Project City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>