test/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Project_Completion__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion__c</fullName>
    <label>zzArchive - Project Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>